--- a/Resources/Private/Language/de.locallang.xlf
+++ b/Resources/Private/Language/de.locallang.xlf
@@ -82,7 +82,7 @@
 			</trans-unit>
             <trans-unit id="tx_rkwwepstra_controller_step.registration_successfull">
                 <source>You have been successfully registered. Your password has been sent to you via e-mail.</source>
-                <target>Woohoo! Sie wurden erfolgreich registriert. Das Passwort für den Login ist per E-Mail auf dem Weg zu Ihnen. Sollten Sie innerhalb der nächsten 2-3 Minuten keine E-Mail von uns erhalten, prüfen Sie bitte Ihren Spam-Filter. Unser Support hilft Ihnen bei Problemen gerne weiter.</target>
+                <target>Wohoo! Sie wurden erfolgreich registriert. Das Passwort für den Login ist per E-Mail auf dem Weg zu Ihnen. Sollten Sie innerhalb der nächsten 2-3 Minuten keine E-Mail von uns erhalten, prüfen Sie bitte Ihren Spam-Filter. Unser Support hilft Ihnen bei Problemen gerne weiter.</target>
             </trans-unit>
             <trans-unit id="tx_rkwwepstra_controller_step.registration_canceled">
                 <source>Your registration was canceled.</source>
