--- a/Resources/Private/Language/de.locallang.xlf
+++ b/Resources/Private/Language/de.locallang.xlf
@@ -1,4 +1,4 @@
-<?xml version='1.0' encoding='utf-8' standalone='yes'?>
+<?xml version="1.0" encoding="utf-8" standalone="yes"?>
 <xliff version="1.0">
 	<file datatype="plaintext" original="messages" product-name="rkw_registration" source-language="en" target-language="de" date="2014-06-12T13:49:26Z">
 		<header>
