--- a/Resources/Private/Language/de.locallang_db.xlf
+++ b/Resources/Private/Language/de.locallang_db.xlf
@@ -1,4 +1,4 @@
-<?xml version='1.0' encoding='utf-8' standalone='yes'?>
+<?xml version="1.0" encoding="utf-8" standalone="yes"?>
 <xliff version="1.0">
 	<file datatype="plaintext" original="messages" product-name="rkw_wepstra" source-language="en" target-language="de-DE" date="2015-11-11T13:43:13Z">
 		<header>
