--- a/Resources/Private/Language/de.locallang_db.xlf
+++ b/Resources/Private/Language/de.locallang_db.xlf
@@ -531,6 +531,15 @@
 			</trans-unit>
 
 
+            <trans-unit id="tx_rkwwepstra_domain_model_frontenduser">
+                <source>RKW WePstra: Anonymous User</source>
+                <target>RKW WePstra: Anonymer Nutzenden</target>
+            </trans-unit>
+            <trans-unit id="tx_rkwwepstra_domain_model_frontenduser.tx_rkwwepstra_is_anonymous">
+                <source>Anonymous User</source>
+                <target>Anonymer Nutzender</target>
+            </trans-unit>
+
 		</body>
 	</file>
 </xliff>
